# linksoap

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/net/clynamic/linksoap/: MainActivity.kt  ShareActivity.kt  ShareConstants.kt  SharePlugin.kt
assets/: icon.psd
assets/banner/: banner.psd
assets/icon/: icon.psd
lib/: main.dart  share_entry.dart
lib/app/: clipboard_setup.dart  share_setup.dart  wash_helper.dart
lib/core/: background_entry.dart  clipboard.dart  desktop_dialog.dart  laundromat.dart  logging.dart  prefill.dart  share.dart  storage.dart  washer.dart
lib/detergent/: editor.dart  model.dart  section.dart
lib/history/: section.dart
lib/home/: page.dart  settings.dart  setup.dart  stats.dart  tutorial.dart
lib/settings/: screen.dart
lib/softener/: editor.dart  model.dart  section.dart
lib/window/: frame.dart  setup.dart  tray.dart
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/packaging/exe/: make_config.yaml
windows/plugins/clipboard_manager/: CMakeLists.txt  clipboard_manager_plugin.cpp  clipboard_manager_plugin.h
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp
